--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "ngx-slick-carousel": "^0.5.1",
-    "rxjs": "~6.5.5",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.6.3",
     "save": "^2.4.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.0.0",
