--- a/angular.json
+++ b/angular.json
@@ -25,16 +25,15 @@
             ],
             "styles": [
               
-              "src/styles.css"   ,
-              "node_modules/slick-carousel/slick/slick.scss",
-              "node_modules/slick-carousel/slick/slick-theme.scss"           
+      
+              "src/styles.css"         
             ],
             "scripts": [
 
               "src/assets/js/plugins.js",
 
-              "src/assets/js/main.js",
-              "node_modules/slick-carousel/slick/slick.min.js"
+              "src/assets/js/main.js"
+           
             ]
           },
           "configurations": {
