--- a/package.json
+++ b/package.json
@@ -16,16 +16,14 @@
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
     "@angular/forms": "~10.0.11",
+    "@angular/localize": "~10.0.11",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
-    "bootstrap": "^4.5.2",
-    "jquery": "^3.5.1",
-    "ngx-slick-carousel": "^0.5.1",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.6.3",
     "save": "^2.4.0",
-    "slick-carousel": "^1.8.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
